PROJECT (MIL)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
GET_FILENAME_COMPONENT(PROJECT_ROOT . ABSOLUTE)

FIND_PACKAGE(OpenCV REQUIRED COMPONENTS core imgproc)

FIND_PACKAGE(trax REQUIRED COMPONENTS core opencv)
LINK_DIRECTORIES(${TRAX_LIBRARY_DIRS})
LINK_LIBRARIES(${TRAX_LIBRARIES})
INCLUDE_DIRECTORIES(AFTER ${TRAX_INCLUDE_DIRS})

LINK_LIBRARIES(${OpenCV_LIBS} trax trax_opencv)
INCLUDE_DIRECTORIES(AFTER ${OpenCV_INCLUDE_DIR} "./include")

ADD_EXECUTABLE(mil ./src/ImageFtr.cpp ./src/Public.cpp ./src/Sample.cpp ./src/OnlineBoost.cpp ./src/Matrix.cpp ./src/Tracker.cpp ./src/BoostTrackMain.cpp)


